--- a/src/common/containers/form/forms/prices/prices-form.component.html
+++ b/src/common/containers/form/forms/prices/prices-form.component.html
@@ -62,7 +62,7 @@
         [error]="formError.importPermanentMonthlyPay || form.controls.importPermanentMonthlyPay.errors"
         [formControl]="form.controls.importPermanentMonthlyPay"
         [id]="'importPermanentMonthlyPay'"
-        appendText="Kč/MWh (bez DPH)"
+        appendText="Kč/měsíc (bez DPH)"
         label="Stálá měsíční platba"
         [success]="form.controls.importPermanentMonthlyPay.valid && (form.controls.importPermanentMonthlyPay.touched || formError.importPermanentMonthlyPay)"
         [touched]="form.controls.importPermanentMonthlyPay.touched || formError.importPermanentMonthlyPay"
