--- a/src/common/ui/supply-point-offer/supply-point-offer.component.html
+++ b/src/common/ui/supply-point-offer/supply-point-offer.component.html
@@ -32,12 +32,11 @@
             </div>
         </div>
         <div
-            class="col-12"
+            class="col-12 order-md-3"
             [class.pt-0]="!isOwner"
             [class.pb-3]="!isOwner"
             [class.col-md-6]="isOwner"
-            [class.order-md-3]="!isOwner"
-            [class.order-md-2]="isOwner"
+            [class.pt-md-3]="isOwner"
             [class.pt-md-4]="!isOwner"
             [class.pb-md-0]="!isOwner">
             <div class="row">
@@ -270,15 +269,13 @@
                 </div>
             </div>
         </div>
-        <div class="
-                col
-                order-md-2"
-            [class.offset-md-6]="isOwner">
+
+        <div class="col-md-6 order-md-2">
             <div
                 [class.supply-point-offer__block]="!isOwner"
                 [class.supply-point-offer__block--second]="!isOwner"
-                [class.py-0]="isOwner"
-                [class.px-0]="isOwner">
+                [class.pl-md-3]="isOwner"
+                [class.mb-5]="isOwner">
                 <div
                     *ngIf="personalInfo?.deposit || supplyPointOffer.totalPrice"
                     class="row">
@@ -301,9 +298,14 @@
                         </span>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div *ngIf="isOwner" class="col-md-6 order-md-4">
+            <div class="supply-point-offer__block supply-point-offer__block--second supply-point-offer__block--small-offset bg-white">
                 <div
-                    *ngIf="isOwner && supplyPointOffer?.permanentPaymentPrice"
-                    class="row mt-5">
+                    *ngIf="supplyPointOffer?.permanentPaymentPrice"
+                    class="row">
                     <div class="col-12">
                         <span class="supply-point-offer__title-label">
                             Poplatek za odberne misto
@@ -315,9 +317,8 @@
                         </span>
                     </div>
                 </div>
-
                 <div
-                    *ngIf="isOwner && supplyPointOffer?.priceNTWithVAT"
+                    *ngIf="supplyPointOffer?.priceNTWithVAT"
                     class="row mt-5">
                     <div class="col-12">
                         <span class="supply-point-offer__title-label">
@@ -331,7 +332,7 @@
                     </div>
                 </div>
                 <div
-                    *ngIf="isOwner && supplyPointOffer.priceVTWithVAT"
+                    *ngIf="supplyPointOffer.priceVTWithVAT"
                     class="row mt-5">
                     <div class="col-12">
                         <span class="supply-point-offer__title-label">
@@ -345,7 +346,7 @@
                     </div>
                 </div>
                 <div
-                    *ngIf="isOwner && supplyPointOffer.priceGasWithVAT"
+                    *ngIf="supplyPointOffer.priceGasWithVAT"
                     class="row mt-5">
                     <div class="col-12">
                         <span class="supply-point-offer__title-label">
