--- a/src/common/ui/forms/field/field.component.html
+++ b/src/common/ui/forms/field/field.component.html
@@ -424,6 +424,7 @@
         <div
             *ngIf="!!subtext || subtextTemplate"
             class="input-subtext"
+            [ngClass]="customInputSubtextClass"
             [class.input-subtext--disabled]="!!disabledField">
             {{ subtext }}
             <ng-container *ngIf="subtextTemplate">
