--- a/src/common/ui/forms/select/select.component.html
+++ b/src/common/ui/forms/select/select.component.html
@@ -1,5 +1,5 @@
 <div
-    [hidden]="disabledField"
+    [hidden]="disabledField && hiddenOnDisable"
     [formGroup]="parentForm"
     class="form-group ng-select-custom"
     [ngClass]="customClass">
