--- a/src/common/ui/supply-point-offer/supply-point-offer.component.html
+++ b/src/common/ui/supply-point-offer/supply-point-offer.component.html
@@ -306,7 +306,7 @@
                     class="row mt-5">
                     <div class="col-12">
                         <span class="supply-point-offer__title-label">
-                            Poplatek za odberne misto
+                            Poplatek za odběrné místo
                         </span>
                     </div>
                     <div class="col-12">
