PXEPR-1499 select disabled styles add

--- a/src/common/ui/forms/field/field.component.scss
+++ b/src/common/ui/forms/field/field.component.scss
@@ -593,6 +593,7 @@ textarea.form-control--not-empty {
 }
 
 .custom-control-label {
+	display: inline-flex;
 	padding-left: ( $custom-control-indicator-size-px + ( $spacer / 2 ) );
 	color: $input-color;
 	font-size: $input-font-size;
