--- a/src/common/containers/form/forms/supply-point/supply-point-form.component.html
+++ b/src/common/containers/form/forms/supply-point/supply-point-form.component.html
@@ -15,7 +15,7 @@
         customClass="ml-2"
         customContentClass="tooltip__content--fixed-width">
         <p class="mb-2">
-            Vyberte tuto možnost pokud nemáte smlouvu se současným dodavatelem, například z důvodu bankrotu, nezasmluvnění atd.
+            Vyberte tuto možnost pokud nemáte platnou smlouvu s dodavatelem, například váš dodavatel selhal a jste v dodávce poslední instance.
         </p>
     </lnd-tooltip>
 </ng-template>
